syntax = "proto3";

package employee;

option go_package = "./grpc/employee";


service EmployeeService {
    rpc GetEmployee (GetEmployeeRequest) returns (EmployeeResponse);
    rpc ListEmployees (ListEmployeesRequest) returns (ListEmployeesResponse);
}

message GetEmployeeRequest {
    int32 employee_id = 1;
}

message EmployeeResponse {
    int32 employee_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string ip_address = 5;
}

message ListEmployeesRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListEmployeesResponse {
    repeated EmployeeResponse employees = 1;
}
